# the-body-electric-system

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main.hpp
data/data_store/: slice_audio.py
